--- a/Assignment/Assignment2.ipynb
+++ b/Assignment/Assignment2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "\"The National Aeronautics and Space Administration (NASA; /ˈnæsə/) is an independent agency of the U.S. federal government responsible for the civil space program, aeronautics research, and space research. Established in 1958, it succeeded the National Advisory Committee for Aeronautics (NACA) to give the U.S. space development effort a distinct civilian orientation, emphasizing peaceful applications in space science. It has since led most of America's space exploration programs, including Project Mercury, Project Gemini, the 1968–1972 Apollo Moon landing missions, the Skylab space station, and the Space Shuttle. Currently, NASA supports the International Space Station (ISS) along with the Commercial Crew Program, and oversees the development of the Orion spacecraft and the Space Launch System for the lunar Artemis program.\""
       ]
      },
-     "execution_count": 76,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        " ('.', '.')]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "'National Aeronautics Space Administration NASA independent agency federal government responsible civil space program aeronautics research space research Established 1958 succeeded National Advisory Committee Aeronautics NACA give space development effort distinct civilian orientation emphasizing peaceful applications space science since led America space exploration programs including Project Mercury Project Gemini Apollo Moon landing missions Skylab space station Space Shuttle Currently NASA supports International Space Station ISS along Commercial Crew Program oversees development Orion spacecraft Space Launch System lunar Artemis program'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        " 'program']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -429,25 +429,25 @@
      "text": [
       "|Word\t|\tPorter\t|\tLancaster\t|\tSnowball|\n",
       " \n",
-      "| National \t|\t nation \t|\t nation \t|\t nation |\n",
+      "| National \t|\t nation \t|\t nat \t|\t nation |\n",
       " \n",
       "| Aeronautics \t|\t aeronaut \t|\t aeronaut \t|\t aeronaut |\n",
       " \n",
-      "| Space \t|\t space \t|\t space \t|\t space |\n",
+      "| Space \t|\t space \t|\t spac \t|\t space |\n",
       " \n",
-      "| Administration \t|\t administr \t|\t administr \t|\t administr |\n",
+      "| Administration \t|\t administr \t|\t admin \t|\t administr |\n",
       " \n",
-      "| NASA \t|\t nasa \t|\t nasa \t|\t nasa |\n",
+      "| NASA \t|\t nasa \t|\t nas \t|\t nasa |\n",
       " \n",
       "| /ˈnæsə/ \t|\t /ˈnæsə/ \t|\t /ˈnæsə/ \t|\t /ˈnæsə/ |\n",
       " \n",
-      "| agency \t|\t agenc \t|\t agenc \t|\t agenc |\n",
+      "| agency \t|\t agenc \t|\t ag \t|\t agenc |\n",
       " \n",
       "| U.S. \t|\t u.s. \t|\t u.s. \t|\t u.s. |\n",
       " \n",
       "| government \t|\t govern \t|\t govern \t|\t govern |\n",
       " \n",
-      "| space \t|\t space \t|\t space \t|\t space |\n",
+      "| space \t|\t space \t|\t spac \t|\t space |\n",
       " \n",
       "| program \t|\t program \t|\t program \t|\t program |\n",
       " \n",
@@ -455,77 +455,77 @@
       " \n",
       "| research \t|\t research \t|\t research \t|\t research |\n",
       " \n",
-      "| space \t|\t space \t|\t space \t|\t space |\n",
+      "| space \t|\t space \t|\t spac \t|\t space |\n",
       " \n",
       "| research \t|\t research \t|\t research \t|\t research |\n",
       " \n",
-      "| National \t|\t nation \t|\t nation \t|\t nation |\n",
+      "| National \t|\t nation \t|\t nat \t|\t nation |\n",
       " \n",
-      "| Advisory \t|\t advisori \t|\t advisori \t|\t advisori |\n",
+      "| Advisory \t|\t advisori \t|\t adv \t|\t advisori |\n",
       " \n",
-      "| Committee \t|\t committe \t|\t committe \t|\t committe |\n",
+      "| Committee \t|\t committe \t|\t commit \t|\t committe |\n",
       " \n",
       "| Aeronautics \t|\t aeronaut \t|\t aeronaut \t|\t aeronaut |\n",
       " \n",
-      "| NACA \t|\t naca \t|\t naca \t|\t naca |\n",
+      "| NACA \t|\t naca \t|\t nac \t|\t naca |\n",
       " \n",
       "| U.S. \t|\t u.s. \t|\t u.s. \t|\t u.s. |\n",
       " \n",
-      "| space \t|\t space \t|\t space \t|\t space |\n",
+      "| space \t|\t space \t|\t spac \t|\t space |\n",
       " \n",
       "| development \t|\t develop \t|\t develop \t|\t develop |\n",
       " \n",
       "| effort \t|\t effort \t|\t effort \t|\t effort |\n",
       " \n",
-      "| orientation \t|\t orient \t|\t orient \t|\t orient |\n",
+      "| orientation \t|\t orient \t|\t ory \t|\t orient |\n",
       " \n",
-      "| applications \t|\t applic \t|\t applic \t|\t applic |\n",
+      "| applications \t|\t applic \t|\t apply \t|\t applic |\n",
       " \n",
-      "| space \t|\t space \t|\t space \t|\t space |\n",
+      "| space \t|\t space \t|\t spac \t|\t space |\n",
       " \n",
-      "| science \t|\t scienc \t|\t scienc \t|\t scienc |\n",
+      "| science \t|\t scienc \t|\t sci \t|\t scienc |\n",
       " \n",
-      "| America \t|\t america \t|\t america \t|\t america |\n",
+      "| America \t|\t america \t|\t americ \t|\t america |\n",
       " \n",
-      "| space \t|\t space \t|\t space \t|\t space |\n",
+      "| space \t|\t space \t|\t spac \t|\t space |\n",
       " \n",
-      "| exploration \t|\t explor \t|\t explor \t|\t explor |\n",
+      "| exploration \t|\t explor \t|\t expl \t|\t explor |\n",
       " \n",
       "| programs \t|\t program \t|\t program \t|\t program |\n",
       " \n",
       "| Project \t|\t project \t|\t project \t|\t project |\n",
       " \n",
-      "| Mercury \t|\t mercuri \t|\t mercuri \t|\t mercuri |\n",
+      "| Mercury \t|\t mercuri \t|\t mercury \t|\t mercuri |\n",
       " \n",
       "| Project \t|\t project \t|\t project \t|\t project |\n",
       " \n",
-      "| Gemini \t|\t gemini \t|\t gemini \t|\t gemini |\n",
+      "| Gemini \t|\t gemini \t|\t gemin \t|\t gemini |\n",
       " \n",
       "| Apollo \t|\t apollo \t|\t apollo \t|\t apollo |\n",
       " \n",
       "| Moon \t|\t moon \t|\t moon \t|\t moon |\n",
       " \n",
-      "| missions \t|\t mission \t|\t mission \t|\t mission |\n",
+      "| missions \t|\t mission \t|\t miss \t|\t mission |\n",
       " \n",
       "| Skylab \t|\t skylab \t|\t skylab \t|\t skylab |\n",
       " \n",
-      "| space \t|\t space \t|\t space \t|\t space |\n",
+      "| space \t|\t space \t|\t spac \t|\t space |\n",
       " \n",
-      "| station \t|\t station \t|\t station \t|\t station |\n",
+      "| station \t|\t station \t|\t stat \t|\t station |\n",
       " \n",
-      "| Space \t|\t space \t|\t space \t|\t space |\n",
+      "| Space \t|\t space \t|\t spac \t|\t space |\n",
       " \n",
       "| Shuttle \t|\t shuttl \t|\t shuttl \t|\t shuttl |\n",
       " \n",
-      "| Currently \t|\t current \t|\t current \t|\t current |\n",
+      "| Currently \t|\t current \t|\t cur \t|\t current |\n",
       " \n",
-      "| NASA \t|\t nasa \t|\t nasa \t|\t nasa |\n",
+      "| NASA \t|\t nasa \t|\t nas \t|\t nasa |\n",
       " \n",
       "| International \t|\t intern \t|\t intern \t|\t intern |\n",
       " \n",
-      "| Space \t|\t space \t|\t space \t|\t space |\n",
+      "| Space \t|\t space \t|\t spac \t|\t space |\n",
       " \n",
-      "| Station \t|\t station \t|\t station \t|\t station |\n",
+      "| Station \t|\t station \t|\t stat \t|\t station |\n",
       " \n",
       "| ISS \t|\t iss \t|\t iss \t|\t iss |\n",
       " \n",
@@ -535,17 +535,17 @@
       " \n",
       "| development \t|\t develop \t|\t develop \t|\t develop |\n",
       " \n",
-      "| Orion \t|\t orion \t|\t orion \t|\t orion |\n",
+      "| Orion \t|\t orion \t|\t or \t|\t orion |\n",
       " \n",
       "| spacecraft \t|\t spacecraft \t|\t spacecraft \t|\t spacecraft |\n",
       " \n",
-      "| Space \t|\t space \t|\t space \t|\t space |\n",
+      "| Space \t|\t space \t|\t spac \t|\t space |\n",
       " \n",
       "| Launch \t|\t launch \t|\t launch \t|\t launch |\n",
       " \n",
       "| System \t|\t system \t|\t system \t|\t system |\n",
       " \n",
-      "| Artemis \t|\t artemi \t|\t artemi \t|\t artemi |\n",
+      "| Artemis \t|\t artemi \t|\t artem \t|\t artemi |\n",
       " \n",
       "| program \t|\t program \t|\t program \t|\t program |\n"
      ]
@@ -554,8 +554,8 @@
    "source": [
     "from nltk.stem import PorterStemmer, LancasterStemmer, SnowballStemmer\n",
     "\n",
-    "ps = SnowballStemmer('english')\n",
-    "ls = SnowballStemmer('english')\n",
+    "ps = PorterStemmer()\n",
+    "ls = LancasterStemmer()\n",
     "ss = SnowballStemmer('english')\n",
     "\n",
     "print(\"|Word\\t|\\tPorter\\t|\\tLancaster\\t|\\tSnowball|\")\n",
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "'Pune (/ˈpuːnə/ POO-nə, Marathi: [ˈpuɳe] ⓘ), previously spelled in English as Poona (the official name until 1978),[15][16] is a city in Maharashtra state in the Deccan plateau in Western India. It is the administrative headquarters of the Pune district, and of Pune division. According to the 2011 Census of India, Pune has 7.2 million residents in the metropolitan region, making it the eighth-most populous metropolitan area in India.[17] The city of Pune is part of Pune Metropolitan Region.[18] Pune is one of the largest IT hubs in India.[19][20] It is also one of the most important automobile and manufacturing hubs of India. Pune is often referred to as the \"Oxford of the East\" because of its highly regarded educational institutions.[21][22][23] It has been ranked \"the most liveable city in India\" several times.[24][25]'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
        " (']', 'NN')]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        " 'several']"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
