--- a/Assignment/Assignment3.ipynb
+++ b/Assignment/Assignment3.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Q2. Open the wikipedia page https://en.wikipedia.org/wiki/Maharashtra\n",
-    "- Apply chuncking and show the chunks of type <VBD><DT>\n",
+    "- Apply chuncking and show the chunks of type `<VBD><DT>`\n",
     "- Find all the named entities present in article\n",
     "- Access all the verbs and apply the porter stemmer and lancaster stemmer\n",
     "- Access all the verbs in past tense and lemmatize them. Show only unique verbs.\n",
