--- a/Assignment/Assignment3.ipynb
+++ b/Assignment/Assignment3.ipynb
@@ -1,6 +1,114 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import wordnet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meanings of the word: drive \n",
+      " ------------------------------\n",
+      "drive.n.01 --> the act of applying force to propel something\n",
+      "drive.n.02 --> a mechanism by which force or power is transmitted in a machine\n",
+      "campaign.n.02 --> a series of actions advancing a principle or tending toward a particular end\n",
+      "driveway.n.01 --> a road leading up to a private house\n",
+      "drive.n.05 --> the trait of being highly motivated\n",
+      "drive.n.06 --> hitting a golf ball off of a tee with a driver\n",
+      "drive.n.07 --> the act of driving a herd of animals overland\n",
+      "drive.n.08 --> a journey in a vehicle (usually an automobile)\n",
+      "drive.n.09 --> a physiological state corresponding to a strong need or desire\n",
+      "drive.n.10 --> (computer science) a device that writes data onto or reads data from a storage medium\n",
+      "drive.n.11 --> a wide scenic road planted with trees\n",
+      "drive.n.12 --> (sports) a hard straight return (as in tennis or squash)\n",
+      "drive.v.01 --> operate or control a vehicle\n",
+      "drive.v.02 --> travel or be transported in a vehicle\n",
+      "drive.v.03 --> cause someone or something to move by driving\n",
+      "force.v.06 --> force into or from an action or state, either physically or metaphorically\n",
+      "drive.v.05 --> to compel or force or urge relentlessly or exert coercive pressure on, or motivate strongly\n",
+      "repel.v.01 --> cause to move back by force or influence\n",
+      "drive.v.07 --> compel somebody to do something, often against his own will or judgment\n",
+      "drive.v.08 --> push, propel, or press with force\n",
+      "drive.v.09 --> cause to move rapidly by striking or throwing with force\n",
+      "tug.v.02 --> strive and make an effort to reach a goal\n",
+      "drive.v.11 --> move into a desired direction of discourse\n",
+      "drive.v.12 --> have certain properties when driven\n",
+      "drive.v.13 --> work as a driver\n",
+      "drive.v.14 --> move by being propelled by a force\n",
+      "drive.v.15 --> urge forward\n",
+      "drive.v.16 --> proceed along in a vehicle\n",
+      "drive.v.17 --> strike with a driver, as in teeing off\n",
+      "drive.v.18 --> hit very hard, as by swinging a bat horizontally\n",
+      "drive.v.19 --> excavate horizontally\n",
+      "drive.v.20 --> cause to function by supplying the force or power for or by controlling\n",
+      "drive.v.21 --> hunting: search for game\n",
+      "drive.v.22 --> hunting: chase from cover into more open ground\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read a word from user and print all meanings of it\n",
+    "word = input('Enter the word: ')\n",
+    "print('Meanings of the word:', word,'\\n','-'*30)\n",
+    "\n",
+    "for word in wordnet.synsets(word):\n",
+    "    print(word.name(), '-->', word.definition())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meanings of the word: drive \n",
+      " ------------------------------\n",
+      "drive.n.01 --> the act of applying force to propel something\n",
+      "drive.n.02 --> a mechanism by which force or power is transmitted in a machine\n",
+      "campaign.n.02 --> a series of actions advancing a principle or tending toward a particular end\n",
+      "driveway.n.01 --> a road leading up to a private house\n",
+      "drive.n.05 --> the trait of being highly motivated\n",
+      "drive.n.06 --> hitting a golf ball off of a tee with a driver\n",
+      "drive.n.07 --> the act of driving a herd of animals overland\n",
+      "drive.n.08 --> a journey in a vehicle (usually an automobile)\n",
+      "drive.n.09 --> a physiological state corresponding to a strong need or desire\n",
+      "drive.n.10 --> (computer science) a device that writes data onto or reads data from a storage medium\n",
+      "drive.n.11 --> a wide scenic road planted with trees\n",
+      "drive.n.12 --> (sports) a hard straight return (as in tennis or squash)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read a word from user and print all noun meanings of it\n",
+    "word = input('Enter the word: ')\n",
+    "print('Meanings of the word:', word,'\\n','-'*30)\n",
+    "\n",
+    "for word in wordnet.synsets(word, pos='n'):\n",
+    "    print(word.name(), '-->', word.definition())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
